# BlockchainMini

./: .gitignore  Cargo.toml
src/: main.rs
~/: my-solana-wallet.json  recipient-keypair.json
