[package]
name = "solanachik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.12"
serde = "1.0.201"
time = "0.3.36"
indicatif = "0.17.8"
sha2 = "0.10.8"
serde_json = "1.0.117"
serde_derive = "1.0.201"
hex = "0.4.3"

[dev-dependencies]
solana-program-test = "1.18.12"
solana-sdk = "1.18.12"