[package]
name = "solanachik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
solana-program = "1.14.11"
solana-client = "1.14.11"
solana-program-test = "1.14.11"
solana-sdk = "1.14.11"
serde = "1.0.201"
time = "0.3.36"
indicatif = "0.17.8"
sha2 = "0.10.8"
serde_json = "1.0.117"
serde_derive = "1.0.201"
hex = "0.4.3"
ring = "0.17.8"
rand = "0.8.5"
uuid = "1.9.1"
borsh = "0.9.3"
borsh-derive = "0.10.0"
subtle = "2.4.1"

[dev-dependencies]
solana-program-test = "1.14.11"
solana-sdk = "1.14.11"
solana-client = "1.14.11"
